--- a/NoteKeeper/NoteKeeper.csproj
+++ b/NoteKeeper/NoteKeeper.csproj
@@ -13,5 +13,6 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.0.0.425677" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
+    <PackageReference Include="XamForms.Controls.Calendar" Version="1.1.1" />
   </ItemGroup>
 </Project>
